RelatedWork: added clarification why other related work is not explained more.

--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -7,8 +7,11 @@ In this chapter we will discuss related work on tamper-proof interaction histori
 
 \subsection{Other related work}
 The topic of reputation system is currently a subject of research for other projects as well.
-There are two more projects worth to briefly mention.
-The Tor project is also working on a implementation of a reputation system
+There are two more projects worth to briefly mention because of similairity to the Tribler project
+and the struggle to build a reputation system.
+These projects are not so thoroughly explained as the blockchain
+as they were not used as a starting point in designing MultiChain.
+The Tor project is working on a implementation of a reputation system
 in an effort to incentivize collaboration\cite{androulaki-torincentive}\cite{chen-torincentive}\cite{dingledine-torincentive}\cite{ghosh-torincentive}\cite{jansen-torincentive}.
-The InterPlanetary File System (IPFS) is a peer-to-peer distributed file system with similairities to the Tribler project.
+The InterPlanetary File System \(IPFS\) is a peer-to-peer distributed file system with similairities to the Tribler project.
 IPFS uses an incentivized block exchange to improve collaboration\cite{benet-ipfs}.
