--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -1,5 +1,8 @@
 \chapter{Related Work}
 In this chapter we will discuss related work on tamper-proof interaction histories.
+The block chain used in Bitcoin is explained extensively,
+because it has much similairity between MultiChain and understanding concepts in the block chain helps understanding MultiChain.
+Bartercast is the current implemented reputation system used by Tribler that will be replaced by MultiChain.
 
 \input{relatedWork/blockChain.tex}
 
