--- a/design/exchanging_blocks.tex
+++ b/design/exchanging_blocks.tex
@@ -1,4 +1,5 @@
 \section{Block creation}
+\label{design:block_creation}
 
 \subsection{Exchanging signatures protocol}
 Nodes will exchange signatures on a common payload that contains the reputation metrics.
