--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -27,6 +27,13 @@
   publisher={Springer}
 }
 
+@book{jenkins,
+  title={Jenkins: the definitive guide},
+  author={Smart, John},
+  year={2011},
+  publisher={" O'Reilly Media, Inc."}
+}
+
 @inproceedings{meulpolder-bartercast-paper,
   title={Bartercast: A practical approach to prevent lazy freeriding in p2p networks},
   author={Meulpolder, Michel and Pouwelse, Johan A and Epema, Dick HJ and Sips, Henk J},
@@ -72,6 +79,14 @@
   year={2013},
   school={TU Delft, Delft University of Technology}
 }
+
+@mscthesis{ruigrok-anonymous,
+  title={BitTorrent file sharing using Tor-like hidden services},
+  author={Ruigrok, RJ},
+  year={2015},
+  school={TU Delft, Delft University of Technology}
+}
+
 
 @article{jansen-torincentive,
   title={From onions to shallots: Rewarding Tor relays with TEARS},
@@ -276,6 +291,15 @@
       month = {November},
       year = {2014},
       howpublished ={\url{https://bitcoin.org/}}
+}
+
+
+@MISC{jenkins-tribler,
+      author = {Tribler},
+      title = {Jenkins Build Server},
+      month = {September},
+      year = {2015},
+      howpublished ={\url{http://jenkins.tribler.org/}}
 }
 
 @MISC{Blockchain.info-bcs,
