--- a/design/chains.tex
+++ b/design/chains.tex
@@ -1,4 +1,4 @@
-\section{Transactions inside a block}
+\section{Blocks inside the MultiChain}
 A peer will have transactions with other peers in the network.
 The peer will want to increase his reputation and have a transaction transcribing his contribution.
 The transaction contains the information about how much data was uploaded and downloaded between the peers
