--- a/frontcover.tex
+++ b/frontcover.tex
@@ -3,7 +3,8 @@
 \null\vfill
 
 \begin{center}
-\LARGE{DoubleEntry:\\ Tamper-proof Interaction History}
+\LARGE{MultiChain:\\
+       		an incremental step in a distributed data structure}
 \end{center}
 
 \vspace{1.5cm}
