--- a/problems/sybil.tex
+++ b/problems/sybil.tex
@@ -92,11 +92,11 @@ But these either have the same limitation and are minor improvements or are non-
 For M to conduct the Sybil Attack he will need to generate a set of key pairs.
 This is trivial to do and Dispersy provides functionality to do this very easily.
 
-%TODO Timing of generating several keys
+\todo{Timing of generating several keys}
 
 With these keys M has to generate blocks.
 
-%TODO timing of generating blocks
+\todo{timing of generating blocks}
 
 Sybil Attack can have a wide range of sophistication.
 Ranging from a large amount of fake identities with a large amount of transaction between them
