--- a/relatedWork/blockChain.tex
+++ b/relatedWork/blockChain.tex
@@ -191,9 +191,9 @@ then more blocks are generated and obviously more transactions can be fitted ins
 The reverse is true if the time is increased.
 But the time between blocks is a balance between the orphan rate of blocks
 and how fast transactions are committed to the blockchain.
-%TODO growth of blocks.
+\todo{growth of blocks}
 
-%TODO source
+\todo{source}
 These two factors currently result in a maximum of roughly 7 transactions per second.
 The performance of Bitcoin can be changed by changing the settings of these two factors.
 This limits the usability of Bitcoins heavily.
