--- a/titlepage.tex
+++ b/titlepage.tex
@@ -3,8 +3,8 @@
   \begin{center}
   \null\vfill
     \begin{center}
-    \LARGE{DoubleEntry:\\
-		Tamper-proof Interaction History}
+    \LARGE{MultiChain:\\
+		an incremental step in a distributed data structure}
     \end{center}
 
     \vspace{3cm}
