--- a/design/design.tex
+++ b/design/design.tex
@@ -4,12 +4,12 @@
 \input{design/exchanging_blocks.tex}
 \input{design/persistence.tex}
 
-\section{Irrevocable Proof-of-Help}
-Digital signatures have the property to be non-repudiable of origin.\cite{VanderLubbe-crypto}.
+\section{Irrevocable proof-of-help}
+Digital signatures have the property to be non-repudiable of origin \cite{VanderLubbe-crypto}.
 After signing a message the signer cannot later deny providing his signature.
 Only in the possesion of a secret key can a signature be made,
 so only the signer could have made the signature.
-This is assuming the secret key was not comprimised at the time of signing.
+This is assuming the secret key was not comprimised.
 
 This property results in that after creating a block
 both participants can no longer deny involvement in that block.
@@ -28,8 +28,8 @@ then uploading to them will stop.
 
 A created block will force a downloader to expose his own freeloading,
 because he will have to add his own total amount of uploaded data and total amount of downloaded data.
-If he has not contribute his share and only downloaded,
-then his total down will be much higher then his total up.
+If he has not contributed his share and only downloaded,
+then his total downloaded data will be much higher then his total up.
 His freeloading is exposed as a result.
 
 Downloaders cannot repudiate downloading.
