--- a/design/exchanging_blocks.tex
+++ b/design/exchanging_blocks.tex
@@ -1,16 +1,55 @@
 \section{Block creation}
 \label{design:block_creation}
+The blocks in the chain are created between two peers in the network.
+
 
 \subsection{Exchanging signatures protocol}
-Nodes will exchange signatures on a common payload that contains the reputation metrics.
-A simple design would be to let the initiator node $A$ send a payload to $B$.
-The payload contains a claim on an increase of reputation and a signature made by $A$.
-If the node $B$ accepts the claim of the increase in reputation,
-then he will add his own signature to the claim.
-The payload and the two signatures are now a new block.
-The block will be added to the current chain of node $B$ 
-and the block will be sent to node $A$ to be appended to the chain of $A$.
+Two peers in a network will create their blocks together without having to rely on a third party.
+Between the peers one is uploading to the other.
+The uploader is traditionally called the seeder in BitTorrent and the receiver of this data the downloader\cite{Cohen-bittorrent}.
+The seeder will initiate the block creation.
+So the seeder can decide how altruistic he wants to be towards the downloader regarding his collaboration.
 
+The seeder, Alice, will create a packet that will be sent to the downloader, Bob.
+Alice will add the data uploaded and downloaded data between the peers
+that has not yet been added to the MultiChain.
+He will add these amounts to his total uploaded and downloaded data and add these total amounts aswell to the packet.
+Finally he adds the public keys of both peers and his own hash pointer to the packet.
+This packet is signed using his private key and sent to the downloader.
+
+Bob will receive this packet and check if the amounts are correct, if the signature is correct,
+and if Alice has not used the previous hash before.
+If this is all correct,
+then Bob will add the amounts of uploaded and downloaded data to his own total amounts.
+The data contained in the previous packet, the total amounts of Bob and the hash of the previous block is
+inserted into a new packet.
+This packet is signed by the private key of Bob and sent back to Alice.
+
+Both parties now have the data of the block and can add this to their chain and continue forward.
+Alice does this upon recieval of the block.
+Bob does this immediatly after sending the return packet to Alice.
+At this point a new block is created.
+A sequence diagram can be seen in Figure \ref{fig:exchange-new-sequence}.
+
+\begin{figure}[tbp]
+	\centerline{\includegraphics[scale=0.3]{design/figs/exchange_new.eps}}
+	\caption{Exchanging signatures for block creation.}
+	\label{fig:exchange-new-sequence}
+\end{figure}
+
+Alice can only make valid claims about and have authority over the interaction between her and Bob.
+So Alice does not need to sign the data containing the previous hash and the total up and down of Bob.
+Alice can only verify the data of Bob inside the chain of Bob.
+The parts of what is signed by Alice and what is signed by Bob can be seen in Figure \ref{fig:payload-signature-new}.
+
+\begin{figure}
+	\centerline{\includegraphics[scale=0.3]{design/figs/signature_new.eps}}
+	\caption{Payload and signature using new functionality.}
+	\label{fig:payload-signature-new}
+\end{figure}
+
+
+\subsection{Synchronizing block creation}
 This simple design does have one major problem.
 It can never be decided in an asynchronous communication model
 if the other node will ever respond and when it will respond.
@@ -29,6 +68,7 @@ The to-be-designed system has to be fault tolerant to
 common problems in a challenged network, such as node failure.
 A second design goal is to be able to process transactions quickly and on a large scale.
 These design goals prevent the adaption of a simple design that will halt until node $B$ responds.
+This design would also result in a deadlock situation, as explained in section \ref{exp:deadlock}
 There are several possible designs that are a solution to this problem.
 
 \subsubsection{Fair exchange signature scheme}
@@ -38,7 +78,7 @@ Either both players receive each others signature or no player receives the othe
 It is infeasible for a node to acquire a signature without giving up their own signature.\cite{asokan-fairexchange}.
 A FESS could be implement for the fair creation of the block.
 
-But all known current FESSs use a trusted third party (TTP) at some point\cite{asokan-fairexchange}.
+But currently all known FESSs use a trusted third party (TTP) at some point\cite{asokan-fairexchange}.
 Some schemes exist that are optimistic and will only need a TTP to resolve conflicts.
 But any TTP will not adhere to the Tribler philosphy 
 of being a truly fully distributed peer-to-peer system.
@@ -58,6 +98,7 @@ This can become unscalable if nodes needs to rework many blocks and can clog the
 These nodes can possible no longer respond and would result in new invalid blocks.
 
 \subsubsection{Half signed blocks}
+\label{des:halfsigned}
 The chosen solution is to keep it simple and allow for inconsistencies between the chains of $A$ and $B$.
 It will be shown that if an inconsistency does occur this is in favor of $A$.
 
@@ -78,8 +119,8 @@ but has not yet interacted with another node $C$.
 
 \item
 Node $B$ can be malicious or simply have failed and $B$ will never respond.
-Node $A$ will timeout and can continue interacting with other nodes $C$.
-Next to this, node $A$ will have to decide how to react upon $B$ not responding.
+Node $A$ will timeout, add a half signed block to the chain and can continue interacting with other nodes $C$.
+$A$ will have to decide how to react upon $B$ not responding.
 A possibility would be to stop helping $B$.
 
 \item
@@ -105,13 +146,6 @@ and will try to interact as fast as possible with other nodes.
 A small grace period can be used to allow node $B$ to have enough time to respond in a normal manner.
 No trusted third party is introduced so a distributed design is achieved.
 
-\subsection{Dispersy}
-Dispersy is middleware for data dissemination in a network.
-Dispersy is used heavily within Tribler
-and is also the core library MultiChain has been build upon.
-Dispersy can also be used to exchange data between two specific nodes \cite{zeilemaker-dispersy}.
-Dispersy is used to exchange messages between nodes implementing MultiChain.
-
 \subsection{Adding append functionality}
 Within Dispersy functionality was already build to create a message, sign the message
 and request multiple nodes to also provide their signature on this message.
@@ -121,11 +155,10 @@ between Alice and Bob for the creating of a new block.
 Alice would initiate a message, insert her data into this message, sign the message, and send this message to Bob.
 The functionality would allow Bob to accept the message and provide his signature or
 modify the message and provide his signature.
-
 Only Bob knows the hash of his head node, and the total up and total download metrics.
 So Bob will always modify the message and insert his own data in the message.
 But this would invalidate the signature of Alice,
-because the signature of Alice was also placed on the empty part of the message.
+because the signature of Alice was also placed on the empty part of the message where the data of Bob is inserted.
 The contents of the message and who signs what can be seen in Figure \ref{fig:payload-signature-old}.
 
 \begin{figure}
@@ -138,40 +171,14 @@ After Bob returns the message,
 Alice would have to resign the message.
 But Bob also needs this valid signature from Alice before he can add the block to his own chain.
 So Alice would need to send a third message to with the new, valid signature back to Bob.
-A sequence diagram can be seen in Figure \ref{fig:exchange-old-sequence}.
+A sequence diagram can be seen in Figure \ref{fig:exchange-old-sequence} of how it would work in Dispersy.
+Functionality was added to Dispersy that allows to append data in a signature request.
+This allows the full signature exchange to be achieved within two messages.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.3]{design/figs/exchange_old.eps}}
 	\caption{Exchanging signatures using existing functionality.}
 	\label{fig:exchange-old-sequence}
-\end{figure}
-
-Alice can only make valid claims about and have authority over the interaction between her and Bob.
-So she does not need to sign the data containing the previous hash and the total up and down of Bob.
-This property allows Bob to append his own data to that of Alice.
-Alice's signature would not become invalid.
-Functionality was added to Dispersy that allows to append data in a signature request.
-The parts of what is signed by Alice and Bob can be seen in Figure \ref{fig:payload-signature-new}.
-
-\begin{figure}
-	\centerline{\includegraphics[scale=0.3]{design/figs/signature_new.eps}}
-	\caption{Payload and signature using new functionality.}
-	\label{fig:payload-signature-new}
-\end{figure}
-
-This allows the full signature exchange to be achieved within two messages.
-Alice creates a message to Bob, but only signs her data.
-Bob inserts his data upon arrival and signs everything.
-Bob saves this message as a block to his own chain
-and sends the message back to Alice.
-Upon arrival Alice can also convert the message to a new block and add this to her own chain.
-Now only two messages are between Alice and Bob are necessary.
-The new sequence diagram can be seen in Figure \ref{fig:exchange-new-sequence}.
-
-\begin{figure}[tbp]
-	\centerline{\includegraphics[scale=0.3]{design/figs/exchange_new.eps}}
-	\caption{Exchanging signatures using added functionality.}
-	\label{fig:exchange-new-sequence}
 \end{figure}
 
 \subsection{Block size}
@@ -188,23 +195,18 @@ The total size of a block is 240 bytes.
 \begin{table}[]
 \begin{adjustwidth}{-.5in}{-.5in}
 \begin{center}
-\begin{tabular}{l|lll|ll}
+\begin{tabular}{lll||lll}
 Name              & Type             & Bytes                   & Name              & Type             & Bytes \\ \hline
-Uploaded KBytes   & integer          & \multicolumn{1}{l|}{4}  & Downloaded Bytes  & integer          & 4     \\
-Total Up A        & integer          & \multicolumn{1}{l|}{4}  & Total Up B        & integer          & 4     \\
-Total Down A      & integer          & \multicolumn{1}{l|}{4}  & Total Down B      & integer          & 4     \\
-Prior Record A    & SHA1 digest      & \multicolumn{1}{l|}{20} & Prior Record B    & SHA1 digest      & 20    \\
-Sequence Number A & signed integer   & \multicolumn{1}{l|}{4}  & Sequence Number B & signed integer   & 4     \\
-Public Key A      & EC binary format & \multicolumn{1}{l|}{64} & Public Key B      & EC binary format & 64    \\
-Signature A       & EC signature     & \multicolumn{1}{l|}{40} & Signature B       & EC signature     & 40
+Uploaded KBytes   & integer          & 4                       & Downloaded Bytes  & integer          & 4     \\
+Total Up A        & integer          & 4                       & Total Up B        & integer          & 4     \\
+Total Down A      & integer          & 4                       & Total Down B      & integer          & 4     \\
+Prior Record A    & SHA1 digest      & 20                      & Prior Record B    & SHA1 digest      & 20    \\
+Sequence Number A & signed integer   & 4                       & Sequence Number B & signed integer   & 4     \\
+Public Key A      & EC binary format & 64                      & Public Key B      & EC binary format & 64    \\
+Signature A       & EC signature     & 40                      & Signature B       & EC signature     & 40
 \end{tabular}
 \caption{Block size}
 \label{table:block_size}
 \end{center}
 \end{adjustwidth}
 \end{table}
-
-MultiChain differs from Bitcoin in that a single block contains only one transaction.
-In Bitcoin a block can contain several transactions up to a certain maximum.
-The blocks are created directly between nodes containing a transaction
-that will transcribe the interaction between A and B.
