--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,10 @@
 \usepackage{url}
 % To allow margin adjustments
 \usepackage{changepage}
+% To allow listings.
+\usepackage{listings}
+% To inserts to do's
+\usepackage{todonotes}
 
 \begin{document}
 
@@ -79,8 +83,11 @@
 \input{relatedWork/relatedWork.tex}
 %Design
 \input{design/design.tex}
+%Experimentation
+\input{experimentation/experimentation.tex}
 %Problems
 \input{problems/problems.tex}
+
 
 
 % BIBLIOGRAPHY
