Deadlock recovery: fixed bb

--- a/experimentation/deadlock/deadlock.tex
+++ b/experimentation/deadlock/deadlock.tex
@@ -27,7 +27,7 @@ Usually the peers continue collaboration and this continuation of a sequence can
 In the graph a more complicated scenario can also be seen where multiple peers timeout between each other.
 
 \begin{figure}
-	\centerline{\includegraphics[scale=0.0375, bb= 0 0 4098 4098]{experimentation/deadlock/deadlock.png}}
+	\centerline{\includegraphics[scale=0.0375]{experimentation/deadlock/deadlock.png}}
 	\caption{Potential deadlocks in MultiChain.}
 	\label{fig:deadlock-double}
 \end{figure}
