Changed mscthesis to book in bib.

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -59,32 +59,32 @@
   year={2014}
 }
 
-@mscthesis{Plak-anonymous,
+@book{Plak-anonymous,
   title={Anonymous Internet: Anonymizing peer-to-peer traffic using applied cryptography},
   author={Plak, RS},
   year={2014},
-  school={TU Delft, Delft University of Technology}
+  publisher={TU Delft, Delft University of Technology}
 }
 
-@mscthesis{logiotatidis-splash,
+@book{logiotatidis-splash,
   title={Splash: data synchronization in unmanaged, untrusted peer-to-peer networks},
   author={Logiotatidis, G},
   year={2010},
-  school={TU Delft, Delft University of Technology}
+  publisher={TU Delft, Delft University of Technology}
 }
 
-@mscthesis{dumitrescu-tribler,
+@book{dumitrescu-tribler,
   title={Rewarding Good Behavior in Peer-to-Peer Networks},
   author={Dumitrescu, V},
   year={2013},
-  school={TU Delft, Delft University of Technology}
+  publisher={TU Delft, Delft University of Technology}
 }
 
-@mscthesis{ruigrok-anonymous,
+@book{ruigrok-anonymous,
   title={BitTorrent file sharing using Tor-like hidden services},
   author={Ruigrok, RJ},
   year={2015},
-  school={TU Delft, Delft University of Technology}
+  publisher={TU Delft, Delft University of Technology}
 }
 
 
