--- a/frontcover.tex
+++ b/frontcover.tex
@@ -4,7 +4,7 @@
 
 \begin{center}
 \LARGE{MultiChain:\\
-       		an incremental step in a distributed data structure}
+       		an incremental step in a new distributed data structure}
 \end{center}
 
 \vspace{1.5cm}
@@ -24,4 +24,3 @@ steffan@norberhuis.nl
 \vspace{2.0cm}
 
 \end{titlepage}
-
