--- a/design/exchanging_blocks.tex
+++ b/design/exchanging_blocks.tex
@@ -68,7 +68,7 @@ The to-be-designed system has to be fault tolerant to
 common problems in a challenged network, such as node failure.
 A second design goal is to be able to process transactions quickly and on a large scale.
 These design goals prevent the adaption of a simple design that will halt until node $B$ responds.
-This design would also result in a deadlock situation, as explained in section \ref{exp:deadlock}
+This design would also result in a deadlock situation, as explained in section \ref{sect:deadlock}
 There are several possible designs that are a solution to this problem.
 
 \subsubsection{Fair exchange signature scheme}
@@ -197,9 +197,9 @@ The total size of a block is 240 bytes.
 \begin{center}
 \begin{tabular}{lll||lll}
 Name              & Type             & Bytes                   & Name              & Type             & Bytes \\ \hline
-Uploaded KBytes   & integer          & 4                       & Downloaded Bytes  & integer          & 4     \\
-Total Up A        & integer          & 4                       & Total Up B        & integer          & 4     \\
-Total Down A      & integer          & 4                       & Total Down B      & integer          & 4     \\
+Uploaded MBytes   & unsigned integer & 4                       & Downloaded MBytes & unsigned integer & 4     \\
+Total Up A        & unsigned integer & 8                       & Total Up B        & unsigned integer & 8     \\
+Total Down A      & unsigned integer & 8                       & Total Down B      & unsigned integer & 8     \\
 Prior Record A    & SHA1 digest      & 20                      & Prior Record B    & SHA1 digest      & 20    \\
 Sequence Number A & signed integer   & 4                       & Sequence Number B & signed integer   & 4     \\
 Public Key A      & EC binary format & 64                      & Public Key B      & EC binary format & 64    \\
